--- a/lib/Chess/Plisco.pod
+++ b/lib/Chess/Plisco.pod
@@ -202,7 +202,7 @@ enriched move.
 
 =item B<pseudoLegalAttacks>
 
-Like </pseudoLegalMoves> but only returns "interesting" moves.  Interesting
+Like L</pseudoLegalMoves> but only returns "interesting" moves.  Interesting
 moves are captures, promotions, and moves directly giving check.  Discovered
 checks are not generated.  This has performance reasons.
 
@@ -886,7 +886,7 @@ in coordinate notation.
 
 =item B<RNG>
 
-Returns a pseudo-random integer created by the well-knows xor-shift
+Returns a pseudo-random integer created by the well-known xor-shift
 pseudo-random number generator.
 
 The random-number generator is always seeded with the same seed (initial value).
