--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for Perl extension Chess-Plisco
 	- fixed exception in quiescence search
 	- implement the UCI stop command
 	- fixed half-move clock reset after castling state change
+	- fixed time forfeit, when playing as white
 
 0.1  2021-09-19
 	- initial version
