--- a/lib/Chess/Plisco.pod
+++ b/lib/Chess/Plisco.pod
@@ -1099,6 +1099,14 @@ These are bitboards of all files ("a" to "h") of the chess board.
 
 These are bitboards of all ranks ("1" to "8") of the chess board.
 
+=head3 CP_WHITE_MASK
+
+Bitboard of all white squares (b1, d1, ... g8)
+
+=head3 CP_BLACK_MASK
+
+Bitboard of all black squares (a1, c1, ... h8)
+
 =head3 CP_FILE_A .. CP_FILE_H
 
 0-based numbers of all files ("a" to "h").
