--- a/lib/Chess/Plisco/Macro.pod
+++ b/lib/Chess/Plisco/Macro.pod
@@ -411,6 +411,10 @@ Same as L<Chess::Plisco/moveSetColor> but modifies B<MOVE> directly.
 
 Same as L<Chess::Plisco/moveEquivalent>.
 
+=item B<cp_move_significant(MOVE)>
+
+Same as L<Chess::Plisco/moveSignificant>.
+
 =item B<cp_move_coordinate_notation(MOVE)>
 
 Same as L<Chess::Plisco/moveCoordinateNotation>.
