--- a/lib/Chess/Plisco/Macro.pod
+++ b/lib/Chess/Plisco/Macro.pod
@@ -255,6 +255,10 @@ Same as L<Chess::Plisco/blackQueenSideCastlingRight>.
 
 Same as L<Chess::Plisco/halfMoveClock>.
 
+=item B<cp_pos_irreversible_clock(POS)>
+
+Same as L<Chess::Plisco/irreversibleClock>.
+
 =item B<cp_pos_half_moves(POS)>
 
 Same as L<Chess::Plisco/halfMoves>.
