--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+	- check for insufficient material
+	- detect draw by repetition
+	- detect draw by 50-moves-rule
+	- enhanced move ordering
 
 0.2  2021-09-21
 	- fixed exception in quiescence search
