solve EPD files

--- a/lib/Chess/Plisco.pod
+++ b/lib/Chess/Plisco.pod
@@ -36,6 +36,8 @@ coordinate notation
 
 =item FEN (Forsyth-Edwards Notation) import and export
 
+=item EPD (Extended Position Notation) parser
+
 =item Static Exchange Evaluation (SEE)
 
 =item Zobrist Keys
