--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+	- EPD parser
 	- check for insufficient material
 	- detect draw by repetition
 	- detect draw by 50-moves-rule
