--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@ Revision history for Perl extension Chess-Plisco
 	- detect draw by repetition
 	- detect draw by 50-moves-rule
 	- enhanced move ordering
+	- Macros in releases are now expanded for faster startup time
 
 0.2  2021-09-21
 	- fixed exception in quiescence search
