--- a/Changes
+++ b/Changes
@@ -6,7 +6,12 @@ Revision history for Perl extension Chess-Plisco
 	- detect draw by repetition
 	- detect draw by 50-moves-rule
 	- enhanced move ordering
-	- Macros in releases are now expanded for faster startup time
+	- better performance
+	- macros in releases are now expanded for faster startup time
+	- new option "Batch" for sequential processing
+	- new command "fen"
+	- new command "evaluate"
+	- new command "see MOVE"
 
 0.2  2021-09-21
 	- fixed exception in quiescence search
