--- a/Changes
+++ b/Changes
@@ -12,6 +12,7 @@ Revision history for Perl extension Chess-Plisco
 	- new command "fen"
 	- new command "evaluate"
 	- new command "see MOVE"
+	- use PeSTO evaluation function
 
 0.2  2021-09-21
 	- fixed exception in quiescence search
