--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+	- Faster engine start-up because macros are expanded for release
 	- EPD parser
 	- check for insufficient material
 	- detect draw by repetition
