--- a/lib/Chess/Plisco.pod
+++ b/lib/Chess/Plisco.pod
@@ -1252,7 +1252,7 @@ generator L</RNG>.
 
 =head1 COPYRIGHT
 
-Copyright (C) 2021 Guido Flohr <guido.flohr@cantanea.com>.
+Copyright (C) 2021-2025 Guido Flohr <guido.flohr@cantanea.com>.
 
 =head1 SEE ALSO
 
