--- a/lib/Chess/Plisco/Engine/TimeControl.pod
+++ b/lib/Chess/Plisco/Engine/TimeControl.pod
@@ -59,7 +59,7 @@ If true, the engine's time is used up and it should move as soon as possible.
 
 =head1 COPYRIGHT
 
-Copyright (C) 2021 Guido Flohr <guido.flohr@cantanea.com>,
+Copyright (C) 2021-2025 Guido Flohr <guido.flohr@cantanea.com>,
 all rights reserved.
 
 =head1 SEE ALSO
