--- a/lib/Chess/Plisco/Engine/Tree.pod
+++ b/lib/Chess/Plisco/Engine/Tree.pod
@@ -64,7 +64,7 @@ The current score of the position.
 
 =head1 COPYRIGHT
 
-Copyright (C) 2021 Guido Flohr <guido.flohr@cantanea.com>,
+Copyright (C) 2021-2025 Guido Flohr <guido.flohr@cantanea.com>,
 all rights reserved.
 
 =head1 SEE ALSO
