--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+	- the move parser is now case-sensitive (breaking change!)
+	- fixed bugs in SAN construction
+	- fixed bugs in SAN parser
 	- should now work under MS-DOS
 	- aspiration windows
 
