--- a/Changes
+++ b/Changes
@@ -1,6 +1,14 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+	- probing of Syzygy endgame tablebase implemented (not yet used in engine)
+	- documentation for helper modules added
+	- check for insufficient material fixed
+	- game over check implemented
+	- smaller bugs in chess logic fixed
+	- the library now uses MAJOR.MINOR.PATCHLEVEL versioning
+
+0.6  2025-11-04
 	- invalid Syzygy references removed
 	- the Syzygy code is work in progress and not yet functional
 
