--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+	- principal variation no longer printed in quiescence search
+	- parseMove() now throws exceptions
+	- parseMove() now does a complete legality check (and throws ...)
+
+v0.7.0  2025-11-11
 	- probing of Syzygy endgame tablebase implemented (not yet used in engine)
 	- documentation for helper modules added
 	- check for insufficient material fixed
