--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+	- pondering implemented in engine
+	- improved time management
+	- fixed printing of prinicipal variation
 	- principal variation no longer printed in quiescence search
 	- parseMove() now throws exceptions
 	- parseMove() now does a complete legality check (and throws ...)
